# libmlpp

./: .gitignore  CMakeLists.txt  README.md  decision_tree.h  linear_classifier.h
core/: dataset.h
datasets/: batch_utils.h  mnist_loader.h
evaluation/: classification.h  evaluation.h  metrics.h  objective_function.h  training_history.h
legacy/: linear_classifier.h
loss/: binary_loss.h  hinge_loss.h  logistic_loss.h  perceptron_loss.h
models/linear/: linear_classifier.h  linear_model.h
models/neural_networks/architectures/lenet/: lenet.cpp  lenet.h
models/neural_networks/core/: parameter.h  tensor.h
models/neural_networks/layers/: 2d_convolution.h  4d_convolution.h  4d_pooling.h  convolution.h  flatten.h  linear.h  relu.h  tanh.h
models/neural_networks/losses/: softmax_cross_entropy.h
models/neural_networks/optimizers/: sgd.h
models/tree/: decision_tree.h
models/tree_based/: decision_tree.h
nn/core/: module.h  sequential.h
nn/evaluation/: classification.h
nn/layers/: 2d_pooling.h  batch_norm.h  linear.h  sigmoid.h
preprocess/: csv_loader.h
regularization/: l2_regularizer.h  no_regularizer.h  regularizer.h
tests/: binary_clf_dataset.py  test_decision_tree.cpp  test_lenet.cpp  test_linear_classifier.cpp  test_svm.cpp  train_lenet_mnist.cpp
trainers/: sgd_trainer.h
